🔥🤯 Support 2024 rule changes
♻️ remove tests for `-s`; group 5e-specific resources
📝🐛 fix template documentation rendering
- Some types and fields were missing and/or not being rendered/linked properly.
- Lots of fixes to more directly/obviously use markdown in comments.
♻️ Clean up user configuration
🔧 🔥 group "sources" in config
🩹 remove date from version
✨ New AC/HP strings
✨ 🐛 New attack strings
✨ coerce booleans from string values
🐛 ✨  Additional source fields
✨ 🐛 updated basicRules / SRD source flags
🐛 detail string for spellcasting focus
🐛 ✨ handle classic edition magic variants
🎨 fully specified index types for reprints
🐛 srd/freeRules tests; fix variant rule links
🎲🐛🎬 dice rendering
🩹 string utility for uppercase
🐛 Pf2e: replace text in names of resistances
🚧 Item types/properties for 2024 rules
🚧 Revisit deities, variants; add bastions
🔊🔥 change log output; remove writeTablesAndNotes
🧪 test output + log files
🔎 fix optional features / optional feature types