@@ -1,5 +1,7 @@
 package dev.ebullient.convert.tools.dnd5e;
 
+import static dev.ebullient.convert.StringUtil.valueOrDefault;
+
 import java.util.function.BiConsumer;
 import java.util.stream.Stream;
 
@@ -10,8 +12,6 @@ import dev.ebullient.convert.tools.IndexType;
 import dev.ebullient.convert.tools.JsonNodeReader;
 import dev.ebullient.convert.tools.JsonTextConverter.SourceField;
 import dev.ebullient.convert.tools.ToolsIndex.TtrpgValue;
-import dev.ebullient.convert.tools.dnd5e.Json2QuteDeck.DeckFields;
-import dev.ebullient.convert.tools.dnd5e.JsonSource.Tools5eFields;
 
 public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     action,
@@ -27,7 +27,7 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     charoptionFluff,
     citation,
     classtype("class"),
-    classFluff, // not really a thing.
+    classFluff,
     classfeature,
     condition,
     conditionFluff,
@@ -35,6 +35,8 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     disease,
     deity,
     deck,
+    facility("bastion"),
+    facilityFluff,
     feat,
     featFluff,
     hazard,
@@ -43,9 +45,9 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     itemFluff,
     itemGroup,
     itemMastery,
+    itemProperty,
     itemType,
     itemTypeAdditionalEntries,
-    itemProperty,
     language,
     legendaryGroup,
     magicvariant,
@@ -55,14 +57,16 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     monsterTemplate,
     object,
     objectFluff,
-    optionalfeature,
+    optfeature,
     optionalFeatureTypes, // homebrew
+    optionalfeatureFluff,
     psionic,
     psionicTypes, // homebrew
     race,
     raceFeature,
     raceFluff,
     reward,
+    rewardFluff,
     sense,
     skill,
     spell,
@@ -75,6 +79,7 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     table,
     tableGroup,
     trap,
+    trapFluff,
     variantrule,
     vehicle,
     vehicleFluff,
@@ -103,8 +108,8 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
         if ("creature".equalsIgnoreCase(name)) {
             return monster;
         }
-        if ("optfeature".equalsIgnoreCase(name)) {
-            return optionalfeature;
+        if ("optionalfeature".equalsIgnoreCase(name)) {
+            return optfeature;
         }
         if ("legroup".equalsIgnoreCase(name)) {
             return legendaryGroup;
@@ -115,6 +120,9 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     }
 
     public static Tools5eIndexType getTypeFromKey(String key) {
+        if (key == null || key.isEmpty()) {
+            return null;
+        }
         String typeKey = key.substring(0, key.indexOf("|"));
         return fromText(typeKey);
     }
@@ -134,28 +142,30 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
                     id).toLowerCase();
         } else if (this == itemTypeAdditionalEntries) {
             return createKey(
-                    Tools5eFields.appliesTo.getTextOrEmpty(x),
+                    IndexFields.appliesTo.getTextOrEmpty(x),
                     SourceField.source.getTextOrEmpty(x));
         }
 
         String name = SourceField.name.getTextOrEmpty(x).trim();
         String source = SourceField.source.getTextOrEmpty(x).trim();
 
+        // With introduction of XPHB, etc., we are going to be explicit about sources
+        // links will be adjusted to add assumed sources
         switch (this) {
             case classfeature -> {
                 String classSource = IndexFields.classSource.getTextOrDefault(x, "phb");
-                return String.format("%s|%s|%s|%s|%s%s",
+                return "%s|%s|%s|%s|%s|%s".formatted(
                         this.name(),
                         name,
                         IndexFields.className.getTextOrEmpty(x),
-                        "phb".equalsIgnoreCase(classSource) ? "" : classSource,
+                        classSource,
                         IndexFields.level.getTextOrEmpty(x),
-                        source.equalsIgnoreCase(classSource) ? "" : "|" + source)
+                        source)
                         .toLowerCase();
             }
             case card -> {
-                String set = DeckFields.set.getTextOrThrow(x).trim();
-                return String.format("%s|%s|%s|%s",
+                String set = IndexFields.set.getTextOrThrow(x).trim();
+                return "%s|%s|%s|%s".formatted(
                         this.name(),
                         name,
                         set,
@@ -163,7 +173,7 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
                         .toLowerCase();
             }
             case deity -> {
-                return String.format("%s|%s|%s|%s",
+                return "%s|%s|%s|%s".formatted(
                         this.name(),
                         name,
                         IndexFields.pantheon.getTextOrEmpty(x).trim(),
@@ -171,61 +181,63 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
                         .toLowerCase();
             }
             case itemType, itemProperty -> {
+                source = SourceField.source.getTextOrDefault(x, "phb");
                 String abbreviation = IndexFields.abbreviation.getTextOrDefault(x, name).trim();
-                return String.format("%s|%s|%s",
+                return "%s|%s|%s".formatted(
                         this.name(),
                         abbreviation,
                         source)
                         .toLowerCase();
             }
             case itemEntry -> {
-                return String.format("%s|%s%s",
+                return "%s|%s|%s".formatted(
                         this.name(),
                         name,
-                        "dmg".equalsIgnoreCase(source) ? "" : "|" + source)
+                        source)
                         .toLowerCase();
             }
-            case optionalfeature -> {
-                return String.format("%s|%s%s",
+            case optfeature -> {
+                return "%s|%s|%s".formatted(
                         this.name(),
                         name,
-                        "phb".equalsIgnoreCase(source) ? "" : "|" + source)
+                        source)
                         .toLowerCase();
             }
             case subclass -> {
-                String classSource = IndexFields.classSource.getTextOrDefault(x, "PHB");
+                String classSource = IndexFields.classSource.getTextOrDefault(x, "phb");
                 String scSource = SourceField.source.getTextOrDefault(x, classSource);
                 // subclass|subclassName|className|classSource|subclassSource
-                return String.format("%s|%s|%s|%s|%s",
+                return "%s|%s|%s|%s|%s".formatted(
                         this.name(),
                         name,
                         IndexFields.className.getTextOrEmpty(x).trim(),
                         classSource,
-                        scSource.equalsIgnoreCase(classSource) ? "" : scSource)
+                        scSource)
                         .toLowerCase();
             }
             case subclassFeature -> {
-                String classSource = IndexFields.classSource.getTextOrDefault(x, "PHB");
-                String scSource = IndexFields.subclassSource.getTextOrDefault(x, "PHB");
-                return String.format("%s|%s|%s|%s|%s|%s|%s%s",
+                String classSource = IndexFields.classSource.getTextOrDefault(x, "phb");
+                String scSource = IndexFields.subclassSource.getTextOrDefault(x, "phb");
+                // scFeature|className|classSource|subclassShortName|subclassSource|level|source
+                return "%s|%s|%s|%s|%s|%s|%s|%s".formatted(
                         this.name(),
                         name,
                         IndexFields.className.getTextOrEmpty(x).trim(),
-                        "phb".equalsIgnoreCase(classSource) ? "" : classSource,
+                        classSource,
                         IndexFields.subclassShortName.getTextOrEmpty(x).trim(),
-                        "phb".equalsIgnoreCase(scSource) ? "" : scSource,
+                        scSource,
                         IndexFields.level.getTextOrEmpty(x),
-                        source.equalsIgnoreCase(scSource) ? "" : "|" + source)
+                        source)
                         .toLowerCase();
             }
             case subrace -> {
-                String raceSource = IndexFields.raceSource.getTextOrDefault(x, "PHB");
-                return String.format("%s|%s|%s|%s%s",
+                String raceSource = IndexFields.raceSource.getTextOrDefault(x, "phb");
+                return "%s|%s|%s|%s|%s".formatted(
                         this.name(),
                         name,
                         IndexFields.raceName.getTextOrEmpty(x).trim(),
                         raceSource,
-                        source.equalsIgnoreCase(raceSource) ? "" : "|" + source)
+                        source)
                         .toLowerCase();
             }
             default -> {
@@ -241,78 +253,112 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
         if (this == book || this == adventure || this == bookData || this == adventureData) {
             return String.format("%s|%s-%s", this.name(), name, source).toLowerCase();
         }
-        if (this == optionalfeature) {
-            // "optionalfeature|agonizing blast",
-            // "optionalfeature|alchemical acid|uaartificer",
-            return String.format("%s|%s%s",
-                    Tools5eIndexType.optionalfeature,
-                    name,
-                    "phb".equalsIgnoreCase(source) ? "" : "|" + source)
-                    .toLowerCase();
-        }
 
         return String.format("%s|%s|%s", this.name(), name, source).toLowerCase();
     }
 
-    public String fromRawKey(String crossRef) {
-        if (this.equals(subclassFeature)) {
-            String[] parts = crossRef.trim().split("\s?\\|\\s?");
-            // 0    name,
-            // 1    IndexFields.className.getTextOrEmpty(x),
-            // 2    "phb".equalsIgnoreCase(classSource) ? "" : classSource,
-            // 3    IndexFields.subclassShortName.getTextOrEmpty(x),
-            // 4    "phb".equalsIgnoreCase(scSource) ? "" : scSource,
-            // 5    IndexFields.level.getTextOrEmpty(x),
-            // 6    source.equalsIgnoreCase(scSource) ? "" : "|" + source)
-            if (parts.length < 6) {
-                Tui.instance().errorf("Badly formed Subclass Feature key (not enough segments): %s", crossRef);
-                return null;
+    public String fromTagReference(String crossRef) {
+        if (crossRef == null || crossRef.isEmpty()) {
+            return null;
+        }
+        String[] parts = crossRef.trim().split("\s?\\|\\s?");
+        return switch (this) {
+            case card -> {
+                // 0    name,
+                // 1    set,
+                // 2    source
+                yield String.format("%s|%s|%s|%s",
+                        this.name(),
+                        parts[0].trim(),
+                        parts[1].trim(),
+                        parts.length > 2 ? parts[2] : defaultSourceString())
+                        .toLowerCase();
             }
-
-            String featureSource = parts.length > 6 ? parts[6] : parts[4];
-            return getSubclassFeatureKey(parts[0], featureSource, parts[1], parts[2], parts[3], parts[4],
-                    parts[5]);
-        }
-        if (this.equals(classfeature)) {
-            String[] parts = crossRef.trim().split("\s?\\|\\s?");
-            // 0    name,
-            // 1    IndexFields.className.getTextOrEmpty(x),
-            // 2    "phb".equalsIgnoreCase(classSource) ? "" : classSource,
-            // 3    IndexFields.level.getTextOrEmpty(x),
-            // 4    source.equalsIgnoreCase(classSource) ? "" : "|" + source)
-            if (parts.length < 4) {
-                Tui.instance().errorf("Badly formed Class Feature key (not enough segments): %s", crossRef);
-                return null;
+            case classfeature -> {
+                // 0    name,
+                // 1    IndexFields.className.getTextOrEmpty(x),
+                // 2    classSource || "phb",
+                // 3    IndexFields.level.getTextOrEmpty(x),
+                // 4    source || classSource
+                if (parts.length < 4) {
+                    Tui.instance().errorf("Badly formed Class Feature key (not enough segments): %s", crossRef);
+                    yield null;
+                }
+                String classSource = valueOrDefault(parts[2], "phb");
+                String featureSource = parts.length > 4 ? parts[4] : classSource;
+                yield getClassFeatureKey(
+                        parts[0], featureSource,
+                        parts[1], classSource,
+                        parts[3]);
             }
-            String featureSource = parts.length > 4 ? parts[4] : parts[2];
-            return getClassFeatureKey(parts[0], featureSource, parts[1], parts[2], parts[3]);
-        }
-        if (this.equals(card)) {
-            String[] parts = crossRef.trim().split("\s?\\|\\s?");
-            // 0    name,
-            // 1    set,
-            // 2    source
-            return String.format("%s|%s|%s|%s",
-                    this.name(),
-                    parts[0].trim(),
-                    parts[1].trim(),
-                    parts.length > 2 ? parts[2] : defaultSourceString())
-                    .toLowerCase();
-        }
+            case itemMastery, itemProperty, itemType -> {
+                // utils.js: itemType.unpackUid, itemProperty.unpackUid
+                String source = parts.length > 1 ? parts[1] : defaultSourceString();
+                yield "%s|%s|%s".formatted(this.name(), parts[0], source).toLowerCase();
+            }
+            case subclassFeature -> {
+                // 0    name,
+                // 1    IndexFields.className.getTextOrEmpty(x),
+                // 2    classSource || "phb",
+                // 3    IndexFields.subclassShortName.getTextOrEmpty(x),
+                // 4    subClassSource || "phb",
+                // 5    IndexFields.level.getTextOrEmpty(x),
+                // 6    source || subClassSource
+                if (parts.length < 6) {
+                    Tui.instance().errorf("Badly formed Subclass Feature key (not enough segments): %s", crossRef);
+                    yield null;
+                }
+                String classSource = valueOrDefault(parts[2], "phb");
+                String subClassSource = valueOrDefault(parts[4], "phb");
+                String featureSource = parts.length > 6 ? parts[6] : subClassSource;
+                yield getSubclassFeatureKey(
+                        parts[0], featureSource,
+                        parts[1], classSource,
+                        parts[3], subClassSource,
+                        parts[5]);
+            }
+            default -> "%s|%s".formatted(this.name(), crossRef).toLowerCase();
+        };
+    }
 
-        return String.format("%s|%s", this.name(), crossRef).toLowerCase();
+    public String toTagReference(JsonNode entry) {
+        String linkText = this.decoratedName(entry);
+        String name = SourceField.name.getTextOrEmpty(entry);
+        String source = SourceField.source.getTextOrEmpty(entry);
+
+        return switch (this) {
+            // {@card Donjon|Deck of Several Things|LLK}
+            case card -> "%s|%s|%s".formatted(
+                    name,
+                    IndexFields.deck.getTextOrEmpty(entry),
+                    source);
+            // {@class Fighter|phb|Samurai|Samurai|xge}
+            case subclass -> Tools5eIndexType.getSubclassTextReference(
+                    IndexFields.className.getTextOrEmpty(entry),
+                    IndexFields.classSource.getTextOrEmpty(entry),
+                    name, source, linkText);
+            // {@subclassFeature Blessed Strikes|Cleric|PHB|Twilight|TCE|8|TCE}
+            case subclassFeature -> "%s|%s|%s|%s|%s|%s|%s|%s".formatted(
+                    name,
+                    IndexFields.className.getTextOrEmpty(entry),
+                    IndexFields.classSource.getTextOrEmpty(entry),
+                    IndexFields.subclassShortName.getTextOrEmpty(entry),
+                    IndexFields.subclassSource.getTextOrEmpty(entry),
+                    IndexFields.level.getTextOrEmpty(entry),
+                    source,
+                    linkText);
+            // {@itemType abv|source|linkText}
+            case itemProperty, itemType -> "%s|%s|%s".formatted(
+                    IndexFields.abbreviation.getTextOrEmpty(entry),
+                    source, linkText);
+            // {@feat name|source|linkText}
+            default -> "%s|%s|%s".formatted(name, source, linkText);
+        };
     }
 
     public String linkify(JsonSource convert, JsonNode entry) {
-        String name = SourceField.name.getTextOrEmpty(entry);
-        String source = SourceField.source.getTextOrEmpty(entry);
-        return switch (this) {
-            case subclass -> convert.linkify(this, Tools5eIndexType.getSubclassTextReference(
-                    Tools5eFields.className.getTextOrEmpty(entry),
-                    Tools5eFields.classSource.getTextOrEmpty(entry),
-                    name, source, name));
-            default -> convert.linkify(this, name + "|" + source + "|" + this.decoratedName(entry));
-        };
+        String reference = toTagReference(entry);
+        return convert.linkify(this, reference);
     }
 
     public String decoratedName(JsonNode entry) {
@@ -335,7 +381,7 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
     public String decoratedName(String name, JsonNode entry) {
         Tools5eSources sources = Tools5eSources.findOrTemporary(entry);
         if (sources.isPrimarySource("DMG")
-                && !sources.type.defaultSourceString().equals("DMG")
+                && !sources.type.defaultSourceString().equalsIgnoreCase("DMG")
                 && !name.contains("(DMG)")) {
             return name + " (DMG)";
         }
@@ -344,57 +390,80 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
 
     public static String getSubclassKey(String className, String classSource, String subclassName, String subclassSource) {
         if (classSource == null || classSource.isEmpty()) {
-            // phb stays in the subclass text reference (match allowed sources)
+            // phb remains in the subclass text reference (match allowed sources)
             classSource = "phb";
         }
-        return String.format("%s|%s|%s|%s|%s",
+        return "%s|%s|%s|%s|%s".formatted(
                 Tools5eIndexType.subclass,
                 subclassName,
                 className,
                 classSource,
-                classSource.equalsIgnoreCase(subclassSource) ? "" : subclassSource)
+                subclassSource)
                 .toLowerCase();
     }
 
     public static String getSubclassTextReference(String className, String classSource, String subclassName,
             String subclassSource, String text) {
         if (classSource == null || classSource.isEmpty()) {
-            // phb stays in the subclass text reference (match allowed sources)
+            // phb remains in the subclass text reference (match allowed sources)
             classSource = "phb";
         }
         // {@class Fighter|phb|Samurai|Samurai|xge}
-        return String.format("%s|%s|%s|%s|%s",
+        return "%s|%s|%s|%s|%s".formatted(
                 className,
                 classSource,
-                text == null ? subclassName : text,
+                valueOrDefault(text, subclassName),
                 subclassName,
-                classSource.equalsIgnoreCase(subclassSource) ? "" : subclassSource);
+                subclassSource);
     }
 
     public static String getClassFeatureKey(String name, String featureSource, String className, String classSource,
             String level) {
-        return String.format("%s|%s|%s|%s|%s%s",
+        return "%s|%s|%s|%s|%s|%s".formatted(
                 Tools5eIndexType.classfeature,
                 name,
                 className,
-                "phb".equalsIgnoreCase(classSource) ? "" : classSource,
+                classSource,
                 level,
-                featureSource.equalsIgnoreCase(classSource) ? "" : "|" + featureSource)
+                featureSource)
                 .toLowerCase();
     }
 
     public static String getSubclassFeatureKey(String name, String featureSource, String className, String classSource,
             String scShortName, String scSource, String level) {
-        return String.format("%s|%s|%s|%s|%s|%s|%s%s",
+        return "%s|%s|%s|%s|%s|%s|%s|%s".formatted(
                 Tools5eIndexType.subclassFeature,
                 name,
                 className,
-                "phb".equalsIgnoreCase(classSource) ? "" : classSource,
+                classSource,
                 scShortName,
-                "phb".equalsIgnoreCase(scSource) ? "" : scSource,
+                scSource,
                 level,
-                featureSource.equalsIgnoreCase(scSource) ? "" : "|" + featureSource)
+                featureSource)
                 .toLowerCase();
+    }
+
+    public String fromChildKey(String key) {
+        if (key == null || key.isEmpty()) {
+            return null;
+        }
+        return switch (this) {
+            case deck, classtype, race -> {
+                String[] parts = key.trim().split("\s?\\|\\s?");
+                // card|cardName|deckName|source
+                // classfeature|cfName|className|classSource|level|cfSource
+                // subclass|scName|className|classSource|scSource
+                // subclassfeature|scfName|className|classSource|subclassShortName|scSource|level|scfSource
+                // subrace|subraceName|raceName|raceSource|subraceSource
+                yield parts.length < 4 ? null : "%s|%s|%s".formatted(this, parts[2], parts[3]);
+            }
+            case subclass -> {
+                String[] parts = key.trim().split("\s?\\|\\s?");
+                // subclassfeature|scfName|className|classSource|subclassShortName|scSource|level|scfSource
+                yield parts.length < 6 ? null : "%s|%s|%s|%s|%s".formatted(this, parts[4], parts[2], parts[3], parts[5]);
+            }
+            default -> null;
+        };
     }
 
     public boolean multiNode() {
@@ -420,15 +489,14 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
                     classtype,
                     deck,
                     deity,
+                    facility,
                     feat,
                     hazard,
                     item,
-                    legendaryGroup,
-                    magicvariant,
+                    itemGroup,
                     monster,
                     object,
-                    optionalfeature,
-                    optionalFeatureTypes,
+                    optfeature,
                     psionic,
                     race,
                     reward,
@@ -486,10 +554,15 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
             case bookData -> "books";
             case card, deck -> "decks";
             case deity -> "deities";
+            case facility -> "bastions";
+            case item, itemGroup -> "items";
+            case itemType -> "item-types";
+            case itemMastery -> "item-mastery";
+            case itemProperty -> "item-properties";
             case legendaryGroup -> "bestiary/legendary-group";
             case magicvariant -> "items";
             case monster -> "bestiary";
-            case optionalfeature, optionalFeatureTypes -> "optional-features";
+            case optfeature, optionalFeatureTypes -> "optional-features";
             case race, subrace -> "races";
             case subclass, classtype -> "classes";
             case table, tableGroup -> "tables";
@@ -505,6 +578,7 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
                 : index.rulesVaultRoot();
     }
 
+    // render.js -- Tag*
     public String defaultSourceString() {
         return switch (this) {
             case card,
@@ -524,27 +598,79 @@ public enum Tools5eIndexType implements IndexType, JsonNodeReader {
                     monster,
                     monsterfeatures ->
                 "MM";
-            case vehicle, vehicleUpgrade -> "GoS";
             case boon, cult -> "MTF";
-            case psionic -> "UATheMysticClass";
             case charoption -> "MOT";
-            case syntheticGroup -> null;
+            case facility -> "XDMG";
+            case itemMastery -> "XPHB";
             case itemTypeAdditionalEntries -> "XGE";
+            case psionic -> "UATheMysticClass";
+            case syntheticGroup -> null;
+            case vehicle, vehicleUpgrade -> "GoS";
             default -> "PHB";
         };
     }
 
+    boolean hasVariants() {
+        return switch (this) {
+            case magicvariant, monster -> true;
+            default -> false;
+        };
+    }
+
+    boolean isFluffType() {
+        return switch (this) {
+            case backgroundFluff,
+                    facilityFluff,
+                    classFluff,
+                    conditionFluff,
+                    featFluff,
+                    itemFluff,
+                    monsterFluff,
+                    objectFluff,
+                    optionalfeatureFluff,
+                    raceFluff,
+                    rewardFluff,
+                    trapFluff,
+                    vehicleFluff ->
+                true;
+            default -> false;
+        };
+    }
+
+    boolean isDependentType() {
+        // These types are not directly filtered.
+        // Special rules are applied after the parent item is filtered
+        return switch (this) {
+            case card,
+                    classfeature,
+                    optfeature,
+                    optionalFeatureTypes,
+                    subclass,
+                    subclassFeature,
+                    subrace ->
+                true;
+            default -> false;
+        };
+    }
+
+    boolean isOutputType() {
+        return useQuteNote() || writeFile();
+    }
+
     enum IndexFields implements JsonNodeReader {
         abbreviation,
+        appliesTo,
         className,
         classSource,
+        deck,
         featureType,
         level,
         pantheon,
         raceName,
         raceSource,
+        set,
         subclassShortName,
-        subclassSource
+        subclassSource,
     }
 
     public void withArrayFrom(JsonNode node, BiConsumer<Tools5eIndexType, JsonNode> callback) {
